# kemini

./: .gitignore  Cargo.toml  README.md
docs/: COMPAT.md  LOCAL-MODEL-HARNESS.md  MODEL-SELECTION.md  SERVICE-CONTROL.md
scripts/: kemini-ctl.sh  tune-ollama-kv.sh  upgrade-ollama.sh
src/: agent.rs  browser.rs  compaction.rs  config.rs  cron.rs  heartbeat.rs  main.rs  memory.rs  paths.rs  prompt.rs  providers.rs  sessions.rs  subagents.rs  telegram.rs  tools.rs  websearch.rs
